app-deployment/staging-dev1/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    app.kubernetes.io/name: spring-music
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: spring-music
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: ghcr.io/musk8teers/container.training-spring-music:1.0.0
        name: spring-music
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: http
        resources:
          requests:
            cpu: 0.1
            memory: 250M
          limits:
            cpu: 2
            memory: 1G
