app-deployment/staging-dev1/statefulset-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:

  labels:
    app.kubernetes.io/name: spring-music
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: spring-music
  name: db
spec:
  selector:
    matchLabels:
      app: db
  serviceName: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:alpine
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresql-data
        resources:
          requests:
            memory: 250M
            cpu: 0.1
          limits:
            memory: 1G
            cpu: 2
  volumeClaimTemplates:
  - metadata:
      name: postgresql-data
      annotations:
        kapp.k14s.io: "owned-for-deletion"
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
