app-deployment/staging-dev1/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: spring-music
  name: db
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: db
  type: ClusterIP
