app-deployment/staging-dev1/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    app.kubernetes.io/name: spring-music
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: web-service
    app.kubernetes.io/part-of: spring-music
  name: web
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: web
  type: ClusterIP
