app-deployment/staging-dev1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-music-dev1-staging
  namespace: dev1-ns
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  tls:
  - secretName: dev1.staging.thegaragebandofit.ovh
    hosts:
    - dev1.staging.thegaragebandofit.ovh
  rules:
  - host: dev1.staging.thegaragebandofit.ovh
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: Prefix
